--- a/EmployeePayRollMVC/EmployeePayRollMVC/EmployeePayRollMVC.csproj
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/EmployeePayRollMVC.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Assets\" />
+  </ItemGroup>
+
 </Project>
